# openiked-portable

./: .gitignore  CMakeLists.txt  Configure.cmake  build.sh  ios.toolchain.cmake
compat/: CMakeLists.txt  endian.h  timingsafe_bcmp.c  timingsafe_memcmp.c  vis.c
compat/sys/: types.h
ikectl/: CMakeLists.txt  ikeca.c  ikectl.c
iked/: CMakeLists.txt  ca.c  config.c  control.c  crypto.c  dh.c  eap.c  iked.conf.5  iked.h  ikev2.c  ikev2.h  ikev2_msg.c  ikev2_pld.c  ios_bridge.c  ios_bridge.h  log.c  ocsp.c  parse.y  pfkey.c  policy.c  swift_bridge.c  swift_bridge.h  timer.c  types.h  util.c
regress/parser-libfuzzer/: common.c
swift/: CMakeLists.txt  bridge.h  ipsec.c  main.swift  pfkey.c  proc.c  swift_bridge.c  swift_bridge.h  swift_bridge_internal.h
swift/etc/iked/: iked.conf  local.pub
swift/etc/iked/ca/: ca.crt
swift/etc/iked/crls/: ca.crl
swift/etc/iked/private/: local.key
swift/etc/ssl/vpn/: 01.pem  ca-ext.cnf  ca-revoke-ssl.cnf  edgesase.iiji.jp-ext.cnf  ikeca.passwd  index.txt
swift/etc/ssl/vpn/private/: ca.csr  ca.key  edgesase.iiji.jp.csr
